# access_control_system

./: README.md
backup/program/: access_control_system.ioc
backup/program/Code/: GUI.h  lcd.c  lcd.h  my_lvgl.c  my_lvgl.h  process.c  process.h  test.c  test.h  touch.c
backup/program/MDK-ARM/: access_control_system.uvguix.starrysky  access_control_system.uvoptx  access_control_system.uvprojx  startup_stm32f407xx.lst
backup/program_rtos/: CMakeLists.txt  access_control_system.ioc
backup/program_rtos/Code/: GUI.c  font.h  lcd.c  lcd.h  log.c  my_lvgl.c  my_lvgl.h  process.c  process.h  test.c  touch.c  touch.h
backup/program_rtos/Code/BSP/: RC522.c  RC522.h  as608.c  as608.h  ctpiic.c  ctpiic.h  data_flash.c  data_flash.h  dwt.c  dwt.h  ft6336.c  ft6336.h  tim.c  tim.h  usart.c  w25qxx.c
backup/program_rtos/Code/UI/: my_ui - 副本.c  my_ui.c  my_ui.h  pwd_scr.c
backup/program_rtos/Core/Inc/: main.h
backup/program_rtos/Core/Src/: freertos.c  gpio.c  main.c  stm32f4xx_it.c
backup/program_rtos/MDK-ARM/: access_control_system.uvguix.starrysky  access_control_system.uvoptx  access_control_system.uvprojx  startup_stm32f407xx.lst
backup/program_rtos/MDK-ARM/access_control_system/: access_control_system.build_log.htm  access_control_system.hex  access_control_system.lnp  access_control_system_access_control_system.dep  as608.d  croutine.d  ctpiic.d  data_flash.crf  data_flash.d  dwt.d  event_groups.d  ft6336.crf  ft6336.d  gifdec.crf  gifdec.d  gpio.crf  gpio.d  heap_4.crf  img_clothes.d  img_demo_widgets_avatar.d  lcd.d  list.d  lodepng.crf  lodepng.d  log.d  lv_anim.crf  lv_anim.d  lv_animimg.crf  lv_animimg.d  lv_arc.crf  lv_area.crf  lv_area.d  lv_async.d  lv_bar.crf  lv_bar.d  lv_bidi.d  lv_bmp.d  lv_btn.crf  lv_btn.d  lv_btnmatrix.d  (+247 more)
src/: .mxproject  access_control_system.ioc
src/Code/: log.h
src/Code/APP/: app_interface.h  app_main.c  app_main.h  说明.txt
src/Code/BSP/: bsp_dwt.c  bsp_dwt.h  bsp_flash.c  bsp_flash.h  bsp_i2c.c  bsp_i2c.h  bsp_spi.c  bsp_spi.h  bsp_tim.h  bsp_uart.c  bsp_uart.h  data_flash.c  dwt.c  说明.txt
src/Code/Components/: as608.c  as608.h  ft6336.c  ft6336.h  ili9341.c  ili9341.h  rc522.c  rc522.h  w25qxx.c  w25qxx.h  说明.txt
src/Code/Services/: svr_card.c  svr_card.h  svr_doorlock.c  svr_doorlock.h  svr_fingerprint.c  svr_fingerprint.h  svr_ota.c  svr_ota.h  svr_storage.c  svr_storage.h  说明.txt
src/Core/Inc/: FreeRTOSConfig.h  main.h  stm32f4xx_it.h
src/Core/Src/: freertos.c  gpio.c  (+5 more)
src/MDK-ARM/: access_control_system.uvguix.starrysky  access_control_system.uvoptx  access_control_system.uvprojx
(+1061 files in other folders)
